--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
        <head>
        <meta>
        <title>MATUSA| Home</title>
-       <link rel="stylesheet" href="style/index.css">
+       <link rel="stylesheet" href="index.css">
 </head>
 
 <!-- this my top navigation -->
@@ -95,12 +95,12 @@
 <div class="images">
            <h4>Municipal and Allied Trade Union South AFRICA<br><span>(KOPANO KE MATLA)</span><br>
            Unity is Strength</h4>
-           <img src="../images/1.jpeg" alt="strike">
-           <img src="../images/matusa.co.za.jpeg" alt="management">
-           <img src="../images/group.jpeg" alt="group">
-           <img src="../images/union.jpeg" alt="unity">
-           <img src="../images/matusa.NOB.jpeg" alt="comrades">
-           <img src="../images/trade-union.png" alt="logo">
+           <img src="1.jpeg" alt="strike">
+           <img src="matusa.co.za.jpeg" alt="management">
+           <img src="group.jpeg" alt="group">
+           <img src="union.jpeg" alt="unity">
+           <img src="matusa.NOB.jpeg" alt="comrades">
+           <img src="trade-union.png" alt="logo">
 
     <p>Revolutionary and socialist oriented
        We represent 30 unions working to create an independent,
