--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
  <!--  the footer starts here -->
  <footer class="foot">
-         <p>Copyright © MATUSA 2015 All rights reserved | Designed by Just In Time Computers</p>
+         <p>Copyright © MATUSA 2015 All rights reserved | Designed by quirky30 Computers</p>
 </footer>
   <!-- end of the footer -->
 
